css & html/mobile done

--- a/estructura de archivos/public/css/general.css
+++ b/estructura de archivos/public/css/general.css
@@ -2,6 +2,8 @@
     --C_Ice-Cream: #dee2e6;
     --C_Grey_Dark: #36393f;
     --C_Light_Dark: #212529;
+    --C_Dark: #202225;
     --C_Blue: #0d6efd;
     --C_Discord: #3d47a0;
+    --C_Light_Grey: #606164;
 }
