line 170 code fix

--- a/estructura de archivos/views/productDetail.html
+++ b/estructura de archivos/views/productDetail.html
@@ -167,8 +167,7 @@
             <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>
             <a href="https://www.mercadopago.com.ar/home"><img src="/images/mercadopago.jpg" alt="Mercadopago"></a>
             <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>
-            <a href="https://www.redlink.com.ar"><img src="/images/Red
-                        Link.png" alt="Red Link"></a>
+            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>
         </section>
         <section class="footer__lastsection">
             <nav class="footer__lastsection__navbar">
