id added body &  css code added

--- a/estructura de archivos/public/css/index.css
+++ b/estructura de archivos/public/css/index.css
@@ -1,4 +1,4 @@
-body {
+#index {
     background-color: #36393f;
     font-family: 'Open Sans', sans-serif;
 }
@@ -17,7 +17,7 @@ body {
     padding-top: 62px;
 }
 
-.main h2,
+#mid h2,
 h2 {
     text-align: center;
     padding: 5px;
