--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
 </head>
 
-<body>
+<body id="index">
     <header id="top">
         <div class="header__top--general">
             <button id="burger"><i class="fa-solid fa-bars"></i></button>
