id body added fixed

--- a/estructura de archivos/views/login.html
+++ b/estructura de archivos/views/login.html
@@ -9,7 +9,7 @@
 
     <title>LOGIN</title>
 </head>
-<body>
+<body id="login">
     <div class="body__container">
         <header>
             <div class="header__container">
