--- a/estructura de archivos/views/register.html
+++ b/estructura de archivos/views/register.html
@@ -9,7 +9,7 @@
     
     <title>REGISTER</title>
 </head>
-<body>
+<body id="register">
     <div class="body__container1">
         <header>
             <div class="header__container1">
