--- a/estructura de archivos/public/css/footer.css
+++ b/estructura de archivos/public/css/footer.css
@@ -4,6 +4,7 @@ footer {
     flex-direction: column;
     background-color: #212529;
     margin-top: 15px;
+    width: 100%;
 }
 
 .footer--logo {
@@ -66,6 +67,7 @@ footer {
 }
 
 @media (min-width: 1024px) {
+    
     .footer--logo img {
         width: 30%;
     }
