--- a/estructura de archivos/views/cart.html
+++ b/estructura de archivos/views/cart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +10,37 @@
     <script src="https://kit.fontawesome.com/21043c454e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
 </head>
+
 <body class="carrito">
     <header id="top">
         <div class="header__top--general">
             <button id="burger"><i class="fa-solid fa-bars"></i></button>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#">Tienda</a></li>
-                    <li><a href="#">Juegos</a></li>
-                    <li><a href="#">Tarjetas de Regalo</a></li>
-                    <li><a href="#">Xbox</a></li>
+                    <li>
+                        <select name="juegos" id="juegos">
+                        <option value="">Juegos</option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        </select>
+                    </li>
+                    <li>
+                        <select name="Xbox" id="Xbox">
+                            <option value="">Xbox</option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </select>
+                    </li>
                     <li><a href="#">Software</a></li>
-                    <li><a href="#">Español Latinoamericano | ARS</a></li>
+                    <li><a href="#">Tarjetas de Regalo</a></li>
+                    <li><a href="#">Productos fisicos</a></li>
+                    <li>Español Latinoamericano | ARS</li>
                 </ul>
             </nav>
             <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
@@ -34,45 +54,47 @@
     <main class="carrito__main">
         <section class="carrito__main__section--productos">
             <p class="carrito__main__section--pruductos-title">Tu carrito</p>
-            <div class="linea"><hr></div>
+            <div class="linea">
+                <hr>
+            </div>
             <div class="articulos">
                 <article>
-                <img src="/images/xbox-key.jpeg" alt="auriculares">
-                <div>
-                    <h3>Mortal combat II</h3>
-                    <p>
-                        Descripcion
-                    </p>
-                    <button class="contador-resta">-</button>
-                    <button class="contador-valor">1</button>
-                    <button class="contador-suma">+</button>
-                    <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
-                    <button class="precio">$2000</button>
-                </div>
+                    <img src="/images/xbox-key.jpeg" alt="auriculares">
+                    <div>
+                        <h3>Mortal combat II</h3>
+                        <p>
+                            Descripcion
+                        </p>
+                        <button class="contador-resta">-</button>
+                        <button class="contador-valor">1</button>
+                        <button class="contador-suma">+</button>
+                        <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
+                        <button class="precio">$2000</button>
+                    </div>
                 </article>
                 <article>
-                <img src="/images/xbox-key.jpeg" alt="silla">
-                <div>
-                    <h3>Producto 2</h3>
-                    <p>Descripcion</p>
-                    <button class="contador-resta">-</button>
-                    <button class="contador-valor">1</button>
-                    <button class="contador-suma">+</button>
-                    <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
-                    <button class="precio">$2000</button>
-                </div>
+                    <img src="/images/xbox-key.jpeg" alt="silla">
+                    <div>
+                        <h3>Producto 2</h3>
+                        <p>Descripcion</p>
+                        <button class="contador-resta">-</button>
+                        <button class="contador-valor">1</button>
+                        <button class="contador-suma">+</button>
+                        <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
+                        <button class="precio">$2000</button>
+                    </div>
                 </article>
                 <article>
-                <img src="/images/xbox-key.jpeg" alt="placagrafica">
-                <div>
-                    <h3>Producto 3</h3>
-                    <p>Descripcion</p>
-                    <button class="contador-resta">-</button>
-                    <button class="contador-valor">1</button>
-                    <button class="contador-suma">+</button>
-                    <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
-                    <button class="precio">$2000</button>
-                </div>
+                    <img src="/images/xbox-key.jpeg" alt="placagrafica">
+                    <div>
+                        <h3>Producto 3</h3>
+                        <p>Descripcion</p>
+                        <button class="contador-resta">-</button>
+                        <button class="contador-valor">1</button>
+                        <button class="contador-suma">+</button>
+                        <button class="delete-product"><i class="fa-solid fa-trash-can"></i></button>
+                        <button class="precio">$2000</button>
+                    </div>
                 </article>
             </div>
             <div class="total">
@@ -80,11 +102,11 @@
                     <p class="total-productos">Productos</p>
                     <p class="total-cantidad">$0</p>
                 </div>
-                <div >
+                <div>
                     <p class="total-envio">Envio</p>
                     <p class="total-cantidad">$0</p>
                 </div>
-                <div >
+                <div>
                     <p class="total-total">Total</p>
                     <p class="total-total-cantidad">$0</p>
                 </div>
@@ -96,27 +118,49 @@
         </section>
         <section class="carrito__main__section--pruductos-recomendados">
             <p class="carrito__main__section--pruductos-title">Productos que pueden interesarte</p>
-            <div class="linea"><hr></div>
+            <div class="linea">
+                <hr>
+            </div>
             <article class="productos-recomendados">
                 <div class="glider-contain">
                     <div class="glider">
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
-                      <div><a href=""><img src="/images/xbox-key.jpeg" alt=""></a></div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
+                        <div>
+                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                        </div>
                     </div>
-                  
+
                     <button aria-label="Previous" class="glider-prev">«</button>
                     <button aria-label="Next" class="glider-next">»</button>
                     <div role="tablist" class="dots"></div>
-                  </div>
-                
+                </div>
+
             </article>
         </section>
     </main>
@@ -147,40 +191,39 @@
     </footer>
     <script src="/js/glider.js"></script>
     <script>
-        window.addEventListener('load', function(){
-  new Glider(document.querySelector('.glider'), {
-    slidesToShow: 2,
-    slidesToScroll:1,
-    itemWith:150,
-    dots: '#dots',
-    arrows: {
-        prev: '.glider-prev',
-        next: '.glider-next'
-    },
-    responsive: [
-    {
-      // screens greater than >= 768px
-      breakpoint: 768,
-      settings: {
-        // Set to `auto` and provide item width to adjust to viewport
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        itemWidth: 150,
-        duration: 0.25
-      }
-    },{
-      // screens greater than >= 1024px
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 5,
-        slidesToScroll: 1,
-        itemWidth: 150,
-        duration: 0.25
-      }
-    }
-  ]
-  })
-})
+        window.addEventListener('load', function() {
+            new Glider(document.querySelector('.glider'), {
+                slidesToShow: 2,
+                slidesToScroll: 1,
+                itemWith: 150,
+                dots: '#dots',
+                arrows: {
+                    prev: '.glider-prev',
+                    next: '.glider-next'
+                },
+                responsive: [{
+                    // screens greater than >= 768px
+                    breakpoint: 768,
+                    settings: {
+                        // Set to `auto` and provide item width to adjust to viewport
+                        slidesToShow: 3,
+                        slidesToScroll: 1,
+                        itemWidth: 150,
+                        duration: 0.25
+                    }
+                }, {
+                    // screens greater than >= 1024px
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 5,
+                        slidesToScroll: 1,
+                        itemWidth: 150,
+                        duration: 0.25
+                    }
+                }]
+            })
+        })
     </script>
 </body>
+
 </html>
