--- a/estructura de archivos/views/cart.html
+++ b/estructura de archivos/views/cart.html
@@ -124,23 +124,51 @@
         <div class="footer--logo">
             <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
         </div>
-        <section class="footer__formas-de-pago">
-            <a href="https://www.visa.com.ar"><img src="/images/Visa.png" alt="Visa"></a>
-            <a href="https://www.mastercard.com.ar/es-ar.html"><img src="/images/Mastercard.png" alt="Mastercard"></a>
-            <a href="https://www.americanexpress.com/es-ar/"><img src="/images/American express.png" alt="American Express"></a>
-            <a href="https://www.naranjax.com"><img src="/images/Naranja.png" alt="Naranja"></a>
-            <a href="https://www.mercadopago.com.ar/home"><img src="/images/mercadopago.jpg" alt="Mercadopago"></a>
-            <a href="https://www.nativanacion.com.ar"><img src="/images/Nativa.jpg" alt="Nativa"></a>
-            <a href="https://www.redlink.com.ar"><img src="/images/Red Link.png" alt="Red Link"></a>
-        </section>
+        <div class="footer_nav">
+            <nav class="footer_nav-home">
+                <p>Titulos</p>
+                <ul type="none">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Mi cuenta</a></li>
+                    <li><a href="">Contactanos</a></li>
+                    <li><a href="">Ayuda</a></li>
+                </ul>
+            </nav>
+            <nav class="footer_nav-aboutUs">
+                <p>
+                    Titulos
+                </p>
+                <ul type="none">
+                    <li><a href=""> Sobre nosotros</a></li>
+                    <li><a href="">Politica de privacidad</a></li>
+                    <li><a href="">Politica de cookies</a></li>
+                    <li><a href="">Aviso legal</a></li>
+                </ul>
+            </nav>
+            <nav class="footer_nav-aboutUs">
+                <p>
+                    Titulos
+                </p>
+                <ul type="none">
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                    <li><a href="">Titulos</a></li>
+                </ul>
+            </nav>
+            <div class="footer_nav-app">
+                <p>Descarga nuestra app</p>
+                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.a7hkwxpVOiMzChf87GmGdwHaCM%26pid%3DApi&f=1" alt=""></a>
+                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1" alt=""></a>
+            </div>
+        </div>
         <section class="footer__lastsection">
             <nav class="footer__lastsection__navbar">
-                <ul>
-                    <li>Sobre nosotros</li>
-                    <li>Contactanos</li>
-                    <li>Politicas de privacidad</li>
-                    <li>Ayuda</li>
-                </ul>
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-discord"></i></a>
             </nav>
             <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
         </section>
