--- a/estructura de archivos/views/index.html
+++ b/estructura de archivos/views/index.html
@@ -62,13 +62,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banner1.webp" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner2.jpg" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner3.jpg" class="d-block w-100 main--img-banner" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -152,21 +152,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Cliente+</h5>
                         <p>Beneficios increibles con Cliente+.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Partnership</h5>
                         <p>Convierte en socio de DALF-Store.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/white-background-2-768x450.jpg" class="d-block w-100 main--img-banner" alt="">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main--img-banner" alt="">
                     <div class="carousel-caption d-none d-md-block main--carousel-p-color">
                         <h5>Merchandising</h5>
                         <p>Compra productos unicos de la pagina. <i class="fa-solid fa-heart"></i> </p>
@@ -291,19 +291,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/banner-accion.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-aventuras.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-rpg.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-indie.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/banner-fps-tps.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
+                    <img src="/images/banner-nigger.webp" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="/images/eric-nice.png" class="d-block w-100 main-article-carousel main--img-banner main--img-banner-categoris" alt="...">
