--- a/estructura de archivos/public/css/header.css
+++ b/estructura de archivos/public/css/header.css
@@ -29,6 +29,25 @@ h1 {
     justify-content: space-around;
 }
 
+.header__top--login {
+    padding-left: 10px;
+}
+
+.offcanvas.offcanvas-end {
+    top: 0;
+    left: 0;
+    border-left: none;
+    transform: translateZ(10px);
+}
+
+.dropdown-menu[data-bs-popper] {
+    left: -138px;
+}
+
+.nav-item {
+    list-style: none;
+}
+
 #burger {
     border: none;
     background-color: transparent;
@@ -82,6 +101,7 @@ h1 {
     background-color: transparent;
     align-items: center;
     color: #dee2e6;
+    padding-left: 10px;
 }
 
 .header__top--general-navigation_button button a {
