--- a/estructura de archivos/src/views/partials/head.ejs
+++ b/estructura de archivos/src/views/partials/head.ejs
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DALF-Store</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="/stylesheets/styles.css" rel="stylesheet" />
-    <link href="/stylesheets/index.css" rel="stylesheet" />
-    <link href="/stylesheets/header.css" rel="stylesheet">
-    <link href="/stylesheets/footer.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/glider.css">
 </head>
