--- a/estructura de archivos/src/views/cart.ejs
+++ b/estructura de archivos/src/views/cart.ejs
@@ -1,56 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito</title>
-    <link rel="stylesheet" href="/stylesheet/styles.css">
-    <script src="https://kit.fontawesome.com/21043c454e.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/css/glider.css">
-</head>
-
+    <%- include('./partials/head',{ title:'home', }) %>
 <body class="carrito">
-    <header id="top">
-        <div class="header__top--general">
-            <button id="burger"><i class="fa-solid fa-bars"></i></button>
-            <nav class="navigation">
-                <ul>
-                    <li>
-                        <select name="juegos" id="juegos">
-                        <option value="">Juegos</option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        </select>
-                    </li>
-                    <li>
-                        <select name="Xbox" id="Xbox">
-                            <option value="">Xbox</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
-                    </li>
-                    <li><a href="#">Software</a></li>
-                    <li><a href="#">Tarjetas de Regalo</a></li>
-                    <li><a href="#">Productos fisicos</a></li>
-                    <li>Español Latinoamericano | ARS</li>
-                </ul>
-            </nav>
-            <a class="header--figure-logo" href="/index"><img src="/images/logo2.png" alt=""></a>
-            <div class="header__top--general-navigation_button">
-                <button><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></button>
-                <button><a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a></button>
-                <button><a href="/login"><i class="fa-solid fa-user"></i></a></button>
-            </div>
-        </div>
-    </header>
+    <%- include('./partials/header',{ title:'home', }) %>
     <main class="carrito__main">
         <section class="carrito__main__section--productos">
             <p class="carrito__main__section--pruductos-title">Tu carrito</p>
@@ -73,9 +25,9 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/images/xbox-key.jpeg" alt="silla">
+                    <img src="/images/eldenring-card.webp" alt="silla">
                     <div>
-                        <h3>Producto 2</h3>
+                        <h3>Elden ring</h3>
                         <p>Descripcion</p>
                         <button class="contador-resta">-</button>
                         <button class="contador-valor">1</button>
@@ -85,9 +37,9 @@
                     </div>
                 </article>
                 <article>
-                    <img src="/images/xbox-key.jpeg" alt="placagrafica">
+                    <img src="/images/gtav-card.jpeg" alt="placagrafica">
                     <div>
-                        <h3>Producto 3</h3>
+                        <h3>Grand theft auto V</h3>
                         <p>Descripcion</p>
                         <button class="contador-resta">-</button>
                         <button class="contador-valor">1</button>
@@ -128,28 +80,28 @@
                             <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/eldenring-card.webp" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/RE2-card.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/megaman11-card.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/re4-card.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/gtav-card.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/minecraftjava-bedrockedition-card.webp" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/minecraftjava-card.jpeg" alt=""></a>
                         </div>
                         <div>
-                            <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
+                            <a href=""><img src="/images/robux-card-roblox.jpeg" alt=""></a>
                         </div>
                         <div>
                             <a href=""><img src="/images/xbox-key.jpeg" alt=""></a>
@@ -164,60 +116,8 @@
             </article>
         </section>
     </main>
-    <footer>
-        <div class="footer--logo">
-            <a href="/index"><img src="/images/logo2.png" alt="Logo"></a>
-        </div>
-        <div class="footer_nav">
-            <nav class="footer_nav-home">
-                <p>Titulos</p>
-                <ul type="none">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Mi cuenta</a></li>
-                    <li><a href="">Contactanos</a></li>
-                    <li><a href="">Ayuda</a></li>
-                </ul>
-            </nav>
-            <nav class="footer_nav-aboutUs">
-                <p>
-                    Titulos
-                </p>
-                <ul type="none">
-                    <li><a href=""> Sobre nosotros</a></li>
-                    <li><a href="">Politica de privacidad</a></li>
-                    <li><a href="">Politica de cookies</a></li>
-                    <li><a href="">Aviso legal</a></li>
-                </ul>
-            </nav>
-            <nav class="footer_nav-aboutUs">
-                <p>
-                    Titulos
-                </p>
-                <ul type="none">
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                    <li><a href="">Titulos</a></li>
-                </ul>
-            </nav>
-            <div class="footer_nav-app">
-                <p>Descarga nuestra app</p>
-                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.a7hkwxpVOiMzChf87GmGdwHaCM%26pid%3DApi&f=1" alt=""></a>
-                <a href=""><img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dnPVcNejErfwIJacdXV27wHaCj%26pid%3DApi&f=1" alt=""></a>
-            </div>
-        </div>
-        <section class="footer__lastsection">
-            <nav class="footer__lastsection__navbar">
-                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                <a href=""><i class="fa-brands fa-twitter"></i></a>
-                <a href=""><i class="fa-brands fa-google-plus-g"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-discord"></i></a>
-            </nav>
-            <p class="footer__lastsection__copyright">Copyright © 2022 DALF-STORE</p>
-        </section>
-    </footer>
-    <script src="/js/glider.js"></script>
+    <%- include('./partials/footer',{ title:'home', }) %>
+    <script src="/javascripts/glider.js"></script>
     <script>
         window.addEventListener('load', function() {
             new Glider(document.querySelector('.glider'), {
